--- a/Laborator6/main/main/main.vcxproj
+++ b/Laborator6/main/main/main.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="BMW.cpp" />
     <ClCompile Include="Cars.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
